deploy/c32/knative-serving/core/mutatingwebhookconfiguration.webhook.serving.knative.dev.k8s.yaml
# Copyright 2020 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: webhook.serving.knative.dev
  labels:
    app.kubernetes.io/name: defaulting-webhook
    app.kubernetes.io/part-of: knative-serving
    app.kubernetes.io/version: "1.0.0"
    serving.knative.dev/release: "v1.0.0"
webhooks:
- name: webhook.serving.knative.dev
  admissionReviewVersions: ["v1", "v1beta1"]
  clientConfig:
    service:
      name: webhook
      namespace: knative-serving
  failurePolicy: Fail
  rules:
  - resources:
    - metrics
    - podautoscalers
    - certificates
    - ingresses
    - serverlessservices
    - configurations
    - revisions
    - routes
    - services
    apiGroups:
    - autoscaling.internal.knative.dev
    - networking.internal.knative.dev
    - serving.knative.dev
    apiVersions:
    - "*"
    operations:
    - CREATE
    - UPDATE
    scope: "*"
  sideEffects: None
  timeoutSeconds: 10
